--- a/1tut/index.html
+++ b/1tut/index.html
@@ -7,14 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <div id="box1">
+    <div id="box1"></div>
+    <div id="box2"></div>
+    <div id="box3"></div>
 
-    </div>
-    <div id="box2"></div> -->
-
-    <h1>Konnichiwa gsap</h1>
+    <!-- <h1>Konnichiwa gsap</h1>
     <h1>namaste gsap</h1>
-    <h1>ni hao gsap</h1>
+    <h1>ni hao gsap</h1> -->
+
+    <div id="nav">
+        <h2>Arigato</h2>
+        <div id="part">
+            <h4>Home</h4>
+            <h4>Courses</h4>
+            <h4>About</h4>
+            <h4>Contact</h4>
+        </div>
+    </div>
+
+    <div id="code">
+        <h1>Tōkyō wa totemo ii basho desu</h1>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
