--- a/2tut/index.html
+++ b/2tut/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- <div id="page1">
+        <div id="box"></div>
+    </div>
+
+    <div id="page2">
+        <div id="box"></div>
+    </div>
+
+    <div id="page3">
+        <div id="box"></div>
+    </div> -->
+    <!-- Part -1 agr use krna h to 3 file m ek sath uncomment krna -->
+
+    <!-- <div id="page1">
+        <div id="box"></div>
+    </div>
+
+    <div id="page2">
+        <h1>Fukui</h1>
+        <h2>Kamakura</h2>
+    </div>
+
+    <div id="page3">
+        <div id="box"></div>
+    </div>  -->
+    <!-- Part - 2 -->
+
     <div id="page1">
         <div id="box"></div>
     </div>
