--- a/8tut/index.html
+++ b/8tut/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <section class="section1">
+        <nav> 
+            <h1><i class="ri-shining-2-fill"></i>WizardZ</h1>
+            <div class="part2">
+                <h4>About us</h4>
+                <h4>Services</h4>
+                <h4>Use Cases</h4>
+                <h4>Pricing</h4>
+                <h4>Blog</h4>
+                <button>Request a quote</button>
+            </div>
+        </nav>
+        <div class="center">
+            <div class="center-part1">
+                <h1>Navigating the digital landscape for success</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, optio consectetur, fugiat laborum aspernatur nulla obcaecati odio quasi quaerat distinctio esse cum a doloremque? Repellendus tempore rerum quis perspiciatis error.</p>
+                <button>Book a consultation</button>
+            </div>
+            <div class="center-part2"></div>
+        </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+        integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
